# nanodet_tensorrt

./: CMakeLists.txt  README.md  get_wts.py  nanodet.cpp
